// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform > should basic selector 1`] = `
".basic .logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}

.basic .logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}

.basic .logo.vanilla:hover {
  filter: drop-shadow(0 0 2em #3178c6aa);
}

.basic .card {
  padding: 2em;
}

.basic .read-the-docs {
  color: #888;
}

* {
  font-size: 12px;
}

*.work {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

*#id {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

a_button_a {
  color: #888;
}

.basic .button {
  color: #909090;
}

button {
  color: #888;
}
"
`;

exports[`transform > should full case 1`] = `
".basic * {
  font-size: 12px;
}

.basic *.work {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.basic *#id {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.basic .read-the-docs {
  color: #888;
}

.basic .logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}

a_button_a {
  color: #888;
}

.basic .button {
  color: #909090;
}
.basic button {
  color: #888;
}
"
`;

exports[`transform > should universal selectors 1`] = `
".basic * {
  font-size: 12px;
}

.basic *.work {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.basic *#id {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
"
`;

exports[`transform > should with html element tags 1`] = `
".basic .logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}

.basic .logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}

.basic .logo.vanilla:hover {
  filter: drop-shadow(0 0 2em #3178c6aa);
}

.basic .card {
  padding: 2em;
}

.basic .read-the-docs {
  color: #888;
}
.basic button {
  color: #888;
}

.basic .button {
  color: #909090;
}
.basic a {
  color: #888;
}
.basic ul {
  color: #888;
}

d {
  color: #888;
}
"
`;

exports[`transform > should with only html element tags 1`] = `
".basic button {
  color: #888;
}

button_a {
  color: #888;
}

a_button {
  color: #888;
}

a_button_a {
  color: #888;
}

.basic .button {
  color: #909090;
}
.basic a {
  color: #888;
}
.basic ul {
  color: #888;
}

d {
  color: #888;
}
"
`;
